Migrate cmo-pipelines to Java11  (#1083)
* Java 11 migration DDP changes (#1082)

* Change Long(long) to Long.valueOf()

* Change Integer(int) to Integer.valueOf(int)

* See if this gets rid of getTimezoneOffset warnings

* See if this fixes build error

* try using calendar

* Restore old code for now

* Unneeded import

* Remove blank line

* Update args to getAnnotatedRecordsUsingPOST call and gnap hash (#1081)

Co-authored-by: cbioportal import user <cbioportal_importer@pipelines.cbioportal.mskcc.org>

* updates for migrating darwin and crdb to java11
pom changes for pulling moved dependencies
changes to java args to silence warnings

* update gnap hash to master (After adjustment to include null check)

* condense java binary paths

---------

Co-authored-by: Calla Chennault <51501715+callachennault@users.noreply.github.com>
Co-authored-by: cbioportal import user <cbioportal_importer@pipelines.cbioportal.mskcc.org>
Co-authored-by: Avery Wang <averyjwang@gmail.com>